updated location of css

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <meta name="author" content="Alice Liang">
 
     <!-- Le styles -->
-    <link href="C:\Users\Alice\Desktop\bootstrap\assets\css\bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="C:\Users\Alice\Desktop\bootstrap\assets\css\bootstrap-responsive.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="C:\Users\Alice\Desktop\bootstrap\assets\img\favicon.ico"/>
+    <link href="\assets\css\bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="\assets\css\bootstrap-responsive.css" rel="stylesheet" type="text/css">
+    <link rel="icon" href="\assets\img\favicon.ico"/>
     <style>
 
     /* GLOBAL STYLES
