updated remaining links

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
           <div class="navbar navbar-inverse navbar-right">
             <a class="brand">Sunshine Bright Cleaners</a>
               <ul class="nav pull-right">
-                 <li class="active"><a href="C:/Users/Alice/Desktop/bootstrap/index.html#findus">Find Us</a></li>
+                 <li class="active"><a href="/index.html#findus">Find Us</a></li>
               </ul>
           </div>
       </div> 
@@ -294,13 +294,13 @@
     <div id="myCarousel" class="carousel slide">
       <div class="carousel-inner">
         <div class="item active">
-          <img src="C:\Users\Alice\Desktop\bootstrap\assets\img\machine.jpg" alt="">
+          <img src="\assets\img\machine.jpg" alt="">
         </div>
         <div class="item">
-          <img src= "C:\Users\Alice\Desktop\bootstrap\assets\img\neon.jpg" alt="">
+          <img src= "\assets\img\neon.jpg" alt="">
         </div>
         <div class="item">
-          <img src="C:\Users\Alice\Desktop\bootstrap\assets\img\spool.jpg" alt="">
+          <img src="\assets\img\spool.jpg" alt="">
         </div>
       </div>
       <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
@@ -345,7 +345,7 @@
       
       <hr class="featurette-divider">
         <h3 class="featurette-heading">Contact Us<span class="muted"> Call / Email</span></h3>
-        <img src="C:\Users\Alice\Desktop\bootstrap\assets\img\owner.jpg" alt="" width="100" height="100" class="img-rounded" align="left"><br>
+        <img src="\assets\img\owner.jpg" alt="" width="100" height="100" class="img-rounded" align="left"><br>
         <strong><span class="muted"><p>Call (718) 507-0650 during business hours.</p>
         <p>Send us a message below:</p><br></span></strong> <br>
         <br><form class="span6">
@@ -382,19 +382,19 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="C:\Users\Alice\Desktop\bootstrap\assets\js\jquery.js"></script>
-    <script src="C:\Users\Alice\Desktop\bootstrap\assets\js\bootstrap-transition.js"></script>
-    <script src="C:\Users\Alice\Desktop\bootstrap\assets\js\bootstrap-alert.js"></script>
-    <script src="C:\Users\Alice\Desktop\bootstrap\assets\js\bootstrap-modal.js"></script>
-    <script src="C:\Users\Alice\Desktop\bootstrap\assets\js\bootstrap-dropdown.js"></script>
-    <script src="C:\Users\Alice\Desktop\bootstrap\assets\js\bootstrap-scrollspy.js"></script>
-    <script src="C:\Users\Alice\Desktop\bootstrap\assets\js\bootstrap-tab.js"></script>
-    <script src="C:\Users\Alice\Desktop\bootstrap\assets\js\bootstrap-tooltip.js"></script>
-    <script src="C:\Users\Alice\Desktop\bootstrap\assets\js\bootstrap-popover.js"></script>
-    <script src="C:\Users\Alice\Desktop\bootstrap\assets\js\bootstrap-button.js"></script>
-    <script src="C:\Users\Alice\Desktop\bootstrap\assets\js\bootstrap-collapse.js"></script>
-    <script src="C:\Users\Alice\Desktop\bootstrap\assets\js\bootstrap-carousel.js"></script>
-    <script src="C:\Users\Alice\Desktop\bootstrap\assets\js\bootstrap-typeahead.js"></script>
+    <script src="\assets\js\jquery.js"></script>
+    <script src="\assets\js\bootstrap-transition.js"></script>
+    <script src="\assets\js\bootstrap-alert.js"></script>
+    <script src="\assets\js\bootstrap-modal.js"></script>
+    <script src="\assets\js\bootstrap-dropdown.js"></script>
+    <script src="\assets\js\bootstrap-scrollspy.js"></script>
+    <script src="\assets\js\bootstrap-tab.js"></script>
+    <script src="\assets\js\bootstrap-tooltip.js"></script>
+    <script src="\assets\js\bootstrap-popover.js"></script>
+    <script src="\assets\js\bootstrap-button.js"></script>
+    <script src="\assets\js\bootstrap-collapse.js"></script>
+    <script src="\assets\js\bootstrap-carousel.js"></script>
+    <script src="\assets\js\bootstrap-typeahead.js"></script>
     <script>
       !function ($) {
         $(function(){
@@ -403,6 +403,6 @@
         })
       }(window.jQuery)
     </script>
-    <script src="C:\Users\Alice\Desktop\bootstrap\assets/js/holder/holder.js"></script>
+    <script src="\assets/js/holder/holder.js"></script>
   </body>
 </html>
