updated find us and carousel

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
           <div class="navbar navbar-inverse navbar-right">
             <a class="brand">Sunshine Bright Cleaners</a>
               <ul class="nav pull-right">
-                 <li class="active"><a href="/index.html#findus">Find Us</a></li>
+                 <li class="active"><a href="http://aliangonyc.github.io/index.html#findus">Find Us</a></li>
               </ul>
           </div>
       </div> 
@@ -303,8 +303,8 @@
           <img src="\assets\img\spool.jpg" alt="">
         </div>
       </div>
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
+      <a class="left carousel-control" data-slide="prev">&lsaquo;</a>
+      <a class="right carousel-control" data-slide="next">&rsaquo;</a>
     </div>
 
 
