only 1 image on carousel

--- a/index.html
+++ b/index.html
@@ -296,13 +296,13 @@
         <div class="item active">
           <img src="\assets\img\machine.jpg" alt="">
         </div>
-        <div class="item">
+        <!--<div class="item">
           <img src= "\assets\img\neon.jpg" alt="">
         </div>
         <div class="item">
           <img src="\assets\img\spool.jpg" alt="">
         </div>
-      </div>
+      </div>-->
       <a class="left carousel-control" data-slide="prev">&lsaquo;</a>
       <a class="right carousel-control" data-slide="next">&rsaquo;</a>
     </div>
