updated owner jpg

--- a/index.html
+++ b/index.html
@@ -345,7 +345,8 @@
       
       <hr class="featurette-divider">
         <h3 class="featurette-heading">Contact Us<span class="muted"> Call / Email</span></h3>
-        <img src="\assets\img\owner.jpg" alt="" width="100" height="100" class="img-rounded" align="left"><br>
+        <!--<img src="\assets\img\owner.jpg" alt="" width="100" height="100" class="img-rounded" align="left">-->
+        <br>
         <strong><span class="muted"><p>Call (718) 507-0650 during business hours.</p>
         <p>Send us a message below:</p><br></span></strong> <br>
         <br><form class="span6">
